# nightfall_4_CE

./: .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  0711-key.txt  08-14-1.txt  08-20-1.txt  08-20.txt  08-21.txt  08-22-1.txt  08-22-2.txt  08-22-3.txt  08-22-4.txt  08-22.txt  08-27-01.txt  08-28-01.txt  09-02_log.txt  Cargo.toml  Jiajie_deployer.txt  Jiajie_deployer_2.txt  Jiajie_deployer_3.txt  Jiajie_log.txt  Jiajie_log2.txt  Jiajie_log_0713_2.txt  Jiajie_log_0714.txt  Jiajie_log_0722.txt  Jiajie_log_0723.txt  Jiajie_log_0724.txt  Jiajie_log_1.txt  Jiajie_log_10.txt  Jiajie_log_11.txt  Jiajie_log_12.txt  Jiajie_log_13.txt  Jiajie_log_14.txt  Jiajie_log_15.txt  Jiajie_log_16.txt  Jiajie_log_17.txt  Jiajie_log_18.txt  Jiajie_log_19.txt  (+45 more)
.cargo/: config.toml
.githooks/: pre-add  pre-commit  pre-push  readme.md
.github/: pull_request_template.md
.github/workflows/: on-pull-request.yml  on-push-master.yml
address_data/: addresses.toml  contract_hashes.toml
anvil/: Dockerfile  entrypoint.sh
blockchain_assets/: nightfall_replace_vk.toml
blockchain_assets/contracts/: ERC1155Mock.sol  ERC20Mock.sol  ERC3525Mock.sol  ERC721Mock.sol  Nightfall.sol  NightfallV2.sol  NightfallV3.sol  Nightfall_V2.sol  Nightfall_V3.sol  ProposerManager.sol  RoundRobin.sol  RoundRobinUUPS.sol  (+3 more)
configuration/: Cargo.toml  Dockerfile  entrypoint.sh  nginx.conf
configuration/src/: addresses.rs  lib.rs  logging.rs  settings.rs
configuration/toml/: addresses.toml
doc/: Contract Optimization.xlsx  Plume_How_to_run_a_node.md  Plume_deployment_guide.md  Plume_testnet_NF_client_guide.md  Setup Testnet Guide.md  Upgradable Contracts Guide.md  base_sepolia.playbook.md  deployment.md  nf_4.md  plume_testnet_client_playbook.md
lib/: Cargo.toml
lib/src/: .env  blockchain_client.rs  build_transfer_inputs.rs  circuit_key_generation.rs  client_models.rs  commitments.rs  constants.rs  contract_conversions.rs  deposit_circuit.rs  derive_key.rs  entities.rs  error.rs  health_check.rs  hex_conversion.rs  lib.rs  log_fetcher.rs  models.rs  nf_client_proof.rs  nf_token_id.rs  rollup_circuit_checks.rs  secret_hash.rs  serialization.rs  shared_entities.rs  tests_utils.rs  utils.rs  validate_certificate.rs  validate_keys.rs  verify_contract.rs  wallets.rs
lib/src/merkle_trees/: append_only.rs  indexed.rs  mod.rs  mutable.rs  trees.rs
lib/src/plonk_prover/: circuit_builder.rs  mod.rs  plonk_proof.rs
lib/src/plonk_prover/circuits/: kemdem_gadgets.rs  mod.rs  unified_circuit.rs
lib/src/plonk_prover/circuits/verify/: verify_commitments_gadgets.rs  verify_encryption_gadgets.rs  verify_nullifiers_gadgets.rs
lib/src/test_helpers/: mocks.rs
nightfall_bindings/: Cargo.toml  build.rs
nightfall_client/: Cargo.toml  Dockerfile
nightfall_client/benches/: bench.md  bench_unified_circuit.rs  poseidon_hash_gadgets_bench.rs
nightfall_client/src/: lib.rs  main.rs
nightfall_client/src/domain/: entities.rs  error.rs  mod.rs  notifications.rs
nightfall_client/src/driven/: mod.rs  queue.rs
nightfall_client/src/driven/contract_functions/: contract_type_conversions.rs  mod.rs  nightfall_contract.rs  token_contracts.rs
nightfall_client/src/driven/db/: commitment_tree.rs  mod.rs  mongo.rs
nightfall_client/src/driven/event_handlers/: mod.rs  nightfall_event.rs
nightfall_client/src/driven/notifier/: mod.rs  webhook_notifier.rs
nightfall_client/src/driven/plonk_prover/: circuit_builder.rs  mod.rs  plonk_proof.rs
nightfall_client/src/driven/plonk_prover/circuits/: mod.rs  unified_circuit.rs
nightfall_client/src/driven/plonk_prover/circuits/verify/: mod.rs  verify_duplicates_gadgets.rs  verify_encryption_gadgets.rs  verify_nullifiers_gadgets.rs
nightfall_client/src/driven/plonk_prover_tests/: mod.rs  unified_circuit_tests.rs  verify_encryption_gadget_tests.rs
nightfall_client/src/driven/primitives/: kemdem_functions.rs  mod.rs
nightfall_client/src/drivers/: derive_key.rs  mod.rs
nightfall_client/src/drivers/blockchain/: event_listener_manager.rs  mod.rs  nightfall_event_listener.rs
nightfall_client/src/drivers/rest/: balance.rs  client_nf_3.rs  client_operation.rs  commitment.rs  keys.rs  mod.rs  models.rs  proposers.rs  request_status.rs  synchronisation.rs  token_info.rs  utils.rs  withdraw.rs
nightfall_client/src/ports/: commitments.rs  contracts.rs  db.rs  events.rs  key_provider.rs  keys.rs  mod.rs  notifier.rs  proof.rs  public_data.rs  trees.rs
nightfall_client/src/services/: client_operation.rs  commitment_selection.rs  data_publisher.rs  mod.rs  process_events.rs
nightfall_client/src/test_helpers/: mocks.rs
nightfall_deployer/: Cargo.toml  Dockerfile  build.rs
nightfall_deployer/src/: deployment.rs  lib.rs  main.rs  vk_contract.rs
nightfall_proposer/: Cargo.toml  Dockerfile
nightfall_proposer/benches/: bench_deposit.rs
nightfall_proposer/src/: lib.rs  main.rs
nightfall_proposer/src/domain/: entities.rs  error.rs
nightfall_proposer/src/driven/: block_assembler.rs  deposit_circuit.rs  in_memory_db.rs  mock_prover.rs  mod.rs  nightfall_client_transaction.rs  nightfall_contract.rs  nightfall_event.rs  rollup_prover.rs
nightfall_proposer/src/driven/db/: commitment_tree.rs  historic_root_tree.rs  mod.rs  mongo_db.rs  nullifier_tree.rs
nightfall_proposer/src/drivers/: mod.rs
nightfall_proposer/src/drivers/blockchain/: block_assembly.rs  event_listener_manager.rs  mod.rs  nightfall_event_listener.rs
nightfall_proposer/src/drivers/rest/: block_assembly.rs  block_data.rs  client_transactions.rs  mod.rs  proposers.rs  synchronisation.rs
nightfall_proposer/src/ports/: block_assembly_trigger.rs  contracts.rs  db.rs  events.rs  mod.rs  proving.rs  synchroniser.rs  transactions.rs  trees.rs
nightfall_proposer/src/services/: assemble_block.rs  mod.rs  process_client_transaction.rs  process_events.rs
nightfall_sync_test/: Cargo.toml  Dockerfile
nightfall_sync_test/src/: main.rs
nightfall_test/: Cargo.toml  Dockerfile
nightfall_test/src/: lib.rs  main.rs  results.txt  run_tests.rs  test.rs  test_settings.rs  validate_certs.rs  webhook.rs
(+231 files in other folders)
