[package]
name = "configuration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.1"
ethers = { version = "2.0.0", features = ["ws"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
url = "2.4.0"
toml = "0.7.6"
log = "0.4.20"
env_logger = "0.10.0"
log-panics = { version = "2", default-features = false }
lazy_static = "1.4.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
hex = "0.4.2"
tokio = { version = "1.25.0", features = ["full"] }

