[package]
name = "configuration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.4"
ethers = { version = "2.0.14", features = ["ws"] }
serde = { version = "1.0.219", features = ["derive"] }
serial_test = "3.2.0"
serde_json = "1.0.140"
reqwest = { version = "0.11.27", features = ["json", "blocking"] }
url = "2.5.4"
toml = "0.7.8"
log = "0.4.27"
env_logger = "0.10.2"
log-panics = { version = "2", default-features = false }
lazy_static = "1.5.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
hex = "0.4.3"
tokio = { version = "1.45.0", features = ["full"] }

