[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.143"
reqwest = { version = "0.11.27", features = ["json", "blocking"] }
warp = "0.3.7"
async-trait = "0.1.88"
hex = "0.4.3"
dotenv = "0.15.0"
x509-parser = "0.16.0"
openssl = "0.10.72"
k256 = "0.13.4"
alloy = { version = "1.0.23", features = ["full", "json-rpc"] }
tokio = { version = "1.45.0", features = ["full"] }
configuration = { path = "../configuration" }
nightfall_bindings = {path = "../nightfall_bindings"}
toml = "0.8.22"
ark-serialize = "0.4.2"
ark-std = { version = "0.4.0", default-features = false }
ark-bn254 = "0.4.0"
alloy-rlp = "0.3.12" 
jf-plonk = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", branch = "livesey/extra-checks", features = [
    "test-srs",
] }
jf-relation = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", branch = "livesey/extra-checks" }
jf-primitives = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", branch = "livesey/extra-checks" }
nf-curves = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", branch = "livesey/extra-checks" }
ark-ec = { version = "0.4.2", features = ["parallel"] }
num-bigint = "0.4.6"
ark-ff = { version = "0.4.2", features = ["parallel"] }
mongodb = "3.2.3"
serde = "1.0.219"
log = "0.4.27"
url = "2.5.4"
testcontainers = { version = "0.24.0", features = ["blocking"] }
futures = "0.3.31"
azure_identity = "0.21.0"
azure_security_keyvault = "0.21.0"
[build-dependencies]
configuration = { path = "../configuration" }
tokio = { version = "1.45.0", features = ["full"] }
jf-primitives = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", branch = "livesey/extra-checks" }
jf-plonk = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", branch = "livesey/extra-checks", features = [
    "test-srs",
] }


[dev-dependencies]
url = "2.5.4"
serde_json = "1.0.140"
