[package]
name = "nightfall_client"
version = "0.1.0"
edition = "2021"

[dependencies]
jf-relation = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", rev = "8e498022e0d2df923943a665d83362c02877c9ff" }
ark-bn254 = "0.4.0"
ark-ff = { version = "0.4.2", features = ["parallel"] }
bip32 = { version = "0.4.0", features = ["bip39"] }
num-bigint = "0.4.6"
num = "0.4.3"
ff_ce = "0.11.0"
ark-ec = { version = "0.4.2", features = ["parallel"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
ark-serialize = "0.4.2"
sha3 = "0.10.8"
sha2 = "0.10"
ethers = { version = "2.0.14", features = ["ws", "aws"] }
warp = "0.3.7"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
serde_json = "1.0.140"
rand = "0.4"
ark-std = { version = "0.4.0", default-features = false }
itertools = { version = "0.10.5", default-features = false }
arkworks-utils = "1.0.1"
mongodb = "3.2.3"
futures = "0.3.31"
async-trait = "0.1.88"
jf-plonk = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", rev = "8e498022e0d2df923943a665d83362c02877c9ff", features = [
    "test-srs",
] }
jf-utils = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", rev = "8e498022e0d2df923943a665d83362c02877c9ff", features = [
    "parallel",
] }
jf-primitives = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", rev = "8e498022e0d2df923943a665d83362c02877c9ff" }
num-traits = "0.2.19"
byteorder = "1.5.0"
hex = "0.4.3"
serde_repr = "0.1.20"
serde_bytes = "0.11"
serde_with = "2.3.3"
config = "0.13.4"
configuration = { path = "../configuration" }
log = "0.4.27"
nf-curves = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", rev = "8e498022e0d2df923943a665d83362c02877c9ff"}
reqwest = "0.11.27"
url = "2.5.4"
rustc-hex = "2.1.0"
uint = "0.9.5"
lazy_static = "1.5.0"
testcontainers = { version = "0.19.0", features = ["blocking"] }
nightfall-bindings = { path = "../nightfall_bindings" }
bincode = "1.3.3"
lib = { path = "../lib" }
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
httparse = "1.10.1"
serial_test = "0.5.1"

[[bench]]
name = "poseidon_hash_gadgets_bench"
harness = false

[[bench]]
name = "bench_unified_circuit"
harness = false

[features]
default = ["parallel"]
std = ["ark-std/std", "ark-serialize/std", "ark-ff/std", "ark-ec/std"]
test_apis = [] # exposing apis for testing purpose
parallel = [
    "ark-ff/parallel",
    "ark-ec/parallel",
    "jf-utils/parallel",
    "jf-relation/parallel",
    "jf-primitives/parallel",
]
