[package]
name = "nightfall_sync_test"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
nightfall_test = { path = "../nightfall_test" }
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.45.0", features = ["full"] }
configuration = { path = "../configuration" }
log = "0.4.27"
nightfall_client = { path = "../nightfall_client" }
nightfall_bindings = {path = "../nightfall_bindings"}
