[package]
name = "nightfall_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
nightfall_client = { path = "../nightfall_client" }
configuration = { path = "../configuration" }
lib = { path = "../lib" }
serde = { version = "1.0.152", features = ["derive"] }
reqwest = { version = "0.11.19", features = ["json", "multipart"] }
url = "2.4.0"
ark-ff = { version = "0.4.0", features = ["parallel"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", default-features = false }
arkworks-utils = "1.0.1"
ark-bn254 = "0.4.0"
ethers = { version = "2.0.0", features = ["ws"] }
hex = "0.4.2"
log = "0.4.20"
sha2 = "0.10.8"
ark-ec = { version = "0.4.0", features = ["parallel"] }
nf-curves = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
jf-plonk = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", features = [
    "test-srs",
] }
jf-primitives = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
jf-relation = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
serial_test = "3.1.1"
nightfall-bindings = { path = "../nightfall_bindings" }
num-bigint = "0.4.3"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.31"
ethers-middleware = "2.0.14"
uuid = { version = "1.16.0", features = ["v4"] }
warp = "0.3.7"


