[package]
name = "nightfall_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "menu"
path = "bin/menu.rs"

[dependencies]
tracing = "0.1.41"
dotenv = "0.15.0"
nightfall_client = { path = "../nightfall_client" }
configuration = { path = "../configuration" }
lib = { path = "../lib" }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
url = "2.5.4"
ark-ff = { version = "0.4.2", features = ["parallel"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
ark-serialize = "0.4.2"
ark-std = { version = "0.4.0", default-features = false }
arkworks-utils = "1.0.1"
ark-bn254 = "0.4.0"
ethers = { version = "2.0.14", features = ["ws"] }
hex = "0.4.3"
log = "0.4.27"
sha2 = "0.10.9"
ark-ec = { version = "0.4.2", features = ["parallel"] }
nf-curves = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", rev = "f7df9e94897457f5d706500782978f51fd4eb250" }
jf-plonk = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", rev = "f7df9e94897457f5d706500782978f51fd4eb250", features = [
    "test-srs",
] }
jf-primitives = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", rev = "f7df9e94897457f5d706500782978f51fd4eb250" }
jf-relation = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", rev = "f7df9e94897457f5d706500782978f51fd4eb250" }
serial_test = "3.2.0"
nightfall-bindings = { path = "../nightfall_bindings" }
num-bigint = "0.4.6"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.31"
ethers-middleware = "2.0.14"
uuid = { version = "1.16.0", features = ["v4"] }
warp = "0.3.7"
console-menu = "0.3.1"
bip32 = { version = "0.4.0", features = ["bip39"] }
inquire = "0.7.5"
toml = "0.8.22"


